--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2236,10 +2236,6 @@ then {11,99 TRY/Month}*/
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "ستتم طباعة الصور من قبل شركة طباعة متعاقدة.";
 "sync_in_progress_delete_is_not_allowed" = "صورك قيد الإعداد، لا يمكنك حذفها في الوقت الحالي. الرجاء معاودة المحاولة في وقت لاحق.";
-"connected_devices" = "";
-"scan_qr_code" = "";
-"scan_qr_code_info" = "";
-"qr_code_try_again" = "";
 "connected_devices" = "قم بتوصيل الجهاز";
 "scan_qr_code" = "مسح رمز الاستجابة السريعة";
 "scan_qr_code_info" = "امسح رمز الاستجابة السريعة ضوئيًا على الجهاز الذي تريد الاتصال به.";
@@ -2249,3 +2245,4 @@ then {11,99 TRY/Month}*/
 "photo_max_selection_body" = "";
 "set_recovery_mail_success" = "";
 "set_recoverymail_securityquestion_success" = "";
+"settings_set_password_apple_warning" = "";
