--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2291,10 +2291,10 @@ then {11,99 TRY/Month}*/
 "connected_devices" = "Connect Device";
 "scan_qr_code" = "Scan QR Code";
 "scan_qr_code_info" = "Scan the QR code on the device you want to connect";
-"qr_code_try_again" = "";
 "qr_code_try_again" = "QR code scanning failed. Please try again.";
 "print" = "Print";
 "photo_max_selection_title" = "";
 "photo_max_selection_body" = "";
 "set_recovery_mail_success" = "";
 "set_recoverymail_securityquestion_success" = "";
+"settings_set_password_apple_warning" = "";
