--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2238,10 +2238,6 @@ then {11,99 TRY/Month}*/
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Фотографии будут напечатаны в типографии, с которой был заключен договор.";
 "sync_in_progress_delete_is_not_allowed" = "Идёт подготовка ваших фотографий, вы не можете удалить их в данный момент. Пожалуйста, повторите попытку позже.";
-"connected_devices" = "";
-"scan_qr_code" = "";
-"scan_qr_code_info" = "";
-"qr_code_try_again" = "";
 "connected_devices" = "Подключить Устройство";
 "scan_qr_code" = "Сканирование QR-кода";
 "scan_qr_code_info" = "Отсканируйте QR-код на устройстве, которое вы хотите подключить.";
@@ -2251,3 +2247,4 @@ then {11,99 TRY/Month}*/
 "photo_max_selection_body" = "";
 "set_recovery_mail_success" = "";
 "set_recoverymail_securityquestion_success" = "";
+"settings_set_password_apple_warning" = "";
