--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1981,9 +1981,9 @@
 "security_popup_header" = "تعيين البريد الإلكتروني الاسترداد أو سؤال الأمان";
 "save_to_my_billo" = "حفظ في Billo";
 "save_to_my_billo_download" = "هل تريد تحميل Billo ملف -%@  - %@.zip ?";
-"on_boarding_btn_google_login" = "تسجيل الدخول باستخدام Google";
+"on_boarding_btn_google_login" = "المتابعة بحساب Google";
 "on_boarding_or" = "أو";
-"on_boarding_btn_apple_login" = "تسجيل الدخول باستخدام Apple";
+"on_boarding_btn_apple_login" = "المتابعة بحساب Apple";
 "google_login_user_exists_body" = "يوجد حساب lifebox مسجل بعنوان البريد الإلكتروني%@. لتوصيل طريقة تسجيل الدخول إلى حساب Google بحساب lifebox الحالي ، يجب عليك أولاً إدخال كلمة مرور lifebox الخاصة بك.";
 "settings_googe_apple_connect" = "خيارات تسجيل الدخول";
 "settings_googe" = "تسجيل الدخول باستخدام Google";
