--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2011,9 +2011,9 @@
 "security_popup_header" = "Configure su Correo electrónico de Recuperación o Pregunta de Seguridad";
 "save_to_my_billo" = "Guardar en Billo";
 "save_to_my_billo_download" = "Desea descargar el archivo Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "Inicia Sesión Con Google";
+"on_boarding_btn_google_login" = "Continuar con Google";
 "on_boarding_or" = "o";
-"on_boarding_btn_apple_login" = "Iniciar Sesión Con Apple";
+"on_boarding_btn_apple_login" = "Continuar con Apple";
 "google_login_user_exists_body" = "Se encuentra una cuenta registrada existente con %@ correo electrónico. Para conectar la ID de inicio de sesión de Google con su cuenta de lifebox existente, primero debe ingresar su contraseña de lifebox.";
 "settings_googe_apple_connect" = "Opciones de İnicio de Sesión";
 "settings_googe" = "Inicia Sesión Con Google";
