--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1969,9 +1969,9 @@
 "security_popup_header" = "Setați E-Mailul de Recuperare sau Întrebarea de Securitate";
 "save_to_my_billo" = "Salvați în Billo";
 "save_to_my_billo_download" = "Doriți să descărcați fișierul Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "Conectați-vă cu Google";
+"on_boarding_btn_google_login" = "Continuați cu Google";
 "on_boarding_or" = "sau";
-"on_boarding_btn_apple_login" = "Conectați-vă cu Apple";
+"on_boarding_btn_apple_login" = "Continuați cu Apple";
 "google_login_user_exists_body" = "Există un cont lifebox înregistrat la adresa de e-mail %@. Pentru a conecta ID-ul dvs. de conectare Google la un cont lifebox existent, trebuie mai întâi să introduceți parola lifebox.";
 "settings_googe_apple_connect" = "Opțiuni de Conectare";
 "settings_googe" = "Conectați-vă cu Contul Google";
