--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1983,9 +1983,9 @@
 "security_popup_header" = "Укажите адрес Электронной Почты Восстановления или Секретный Вопрос";
 "save_to_my_billo" = "Сохранить в Billo";
 "save_to_my_billo_download" = "Вы хотите загрузить файл Billo  - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "Войти через Google";
+"on_boarding_btn_google_login" = "Продолжить с Google";
 "on_boarding_or" = "или";
-"on_boarding_btn_apple_login" = "Войти через Apple";
+"on_boarding_btn_apple_login" = "Продолжить с Apple";
 "google_login_user_exists_body" = "Имеется учетная запись lifebox, зарегистрированная на адрес электронной почты %@. Чтобы связать идентификатор входа Google с существующей учетной записью lifebox, вы должны сначала ввести свой пароль lifebox.";
 "settings_googe_apple_connect" = "Параметры Входа";
 "settings_googe" = "Войти с Учетной Записью Google";
