--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2012,9 +2012,9 @@
 "security_popup_header" = "Vendosni E-mailin tuaj të Rimëkëmbjes ose Pyetjen e Sigurisë";
 "save_to_my_billo" = "Ruaj Në Billo";
 "save_to_my_billo_download" = "A doni të shkarkoni skedarin Billo - %@ - %@.zip?";
-"on_boarding_btn_google_login" = "Hyni me Google";
+"on_boarding_btn_google_login" = "Vazhdoni Me Google";
 "on_boarding_or" = "ose";
-"on_boarding_btn_apple_login" = "Hyni me Apple";
+"on_boarding_btn_apple_login" = "Vazhdoni Me Apple";
 "google_login_user_exists_body" = "Ekziston një llogari lifebox e regjistruar me adresën e emailit %@. Për të lidhur ID-në e hyrjes në Google me llogarinë tuaj ekzistuese lifebox, fillimisht duhet të vendosni fjalëkalimin tuaj lifebox.";
 "settings_googe_apple_connect" = "Opsionet e Hyrjes";
 "settings_googe" = "Identifikohu me Google ID";
