--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2526,7 +2526,7 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "Libérez de l'espace sur votre appareil.";
 "recommended" = "Recommandé";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "Ne manquez pas l'occasion";
 "print_package_print_firm" = "Les photos seront imprimées par une imprimerie sous contrat.";
 "sync_in_progress_delete_is_not_allowed" = "La préparation de vos photos est en cours, vous ne pouvez pas les supprimer pour le moment. Veuillez réessayer plus tard.";
 "connected_devices" = "Connecter L'appareil";
@@ -2536,6 +2536,11 @@ then {11,99 TRY/Month}*/
 "print" = "";
 "photo_max_selection_title" = "";
 "photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"set_recovery_mail_success" = "Votre e-mail de récupération a été créé.";
+"set_recoverymail_securityquestion_success" = "Votre courriel de récupération et votre question secrète ont été créés.";
+"settings_set_password_apple_warning" = "Vous devez être connecté à lifebox avec un compte Apple pour définir un mot de passe.";
+"lifebox_resignup_warning" = "";
+"best_scene_discover_card_title" = "";
+"best_scene_discover_card_body" = "";
+"print_discover_card_title" = "";
+"print_discover_card_body" = "";
