--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2235,7 +2235,7 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "Освободите место на вашем устройстве.";
 "recommended" = "Рекомендуемый";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "Не Упустите Возможность";
 "print_package_print_firm" = "Фотографии будут напечатаны в типографии, с которой был заключен договор.";
 "sync_in_progress_delete_is_not_allowed" = "Идёт подготовка ваших фотографий, вы не можете удалить их в данный момент. Пожалуйста, повторите попытку позже.";
 "connected_devices" = "Подключить Устройство";
@@ -2245,6 +2245,11 @@ then {11,99 TRY/Month}*/
 "print" = "";
 "photo_max_selection_title" = "";
 "photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"set_recovery_mail_success" = "Ваша электронная почта для восстановления была создана.";
+"set_recoverymail_securityquestion_success" = "Ваша электронная почта для восстановления и секретный вопрос были созданы.";
+"settings_set_password_apple_warning" = "Чтобы установить пароль, необходимо войти в lifebox с помощью учетной записи Apple.";
+"lifebox_resignup_warning" = "";
+"best_scene_discover_card_title" = "";
+"best_scene_discover_card_body" = "";
+"print_discover_card_title" = "";
+"print_discover_card_body" = "";
