--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2223,7 +2223,7 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "free_up_space_title_settings" = "Звільніть місце в пам'яті вашого телефону.";
 "recommended" = "Рекомендований";
-"dont_miss_opportunity" = "";
+"dont_miss_opportunity" = "Не Пропустіть Можливість";
 "print_package_print_firm" = "Фотографії будуть надруковані поліграфічною компанією, з якою укладено договір.";
 "sync_in_progress_delete_is_not_allowed" = "Йде підготовка ваших фотографій, ви не можете видалити їх в даний момент. Будь ласка, повторіть спробу пізніше.";
 "connected_devices" = "Підключити Пристрій";
@@ -2233,6 +2233,11 @@ then {11,99 TRY/Month}*/
 "print" = "";
 "photo_max_selection_title" = "";
 "photo_max_selection_body" = "";
-"set_recovery_mail_success" = "";
-"set_recoverymail_securityquestion_success" = "";
-"settings_set_password_apple_warning" = "";
+"set_recovery_mail_success" = "Вашу електронну пошту для відновлення було створено.";
+"set_recoverymail_securityquestion_success" = "Вашу електронну пошту для відновлення та секретне запитання було створено.";
+"settings_set_password_apple_warning" = "Щоб встановити пароль, необхідно увійти в lifebox за допомогою облікового запису Apple.";
+"lifebox_resignup_warning" = "";
+"best_scene_discover_card_title" = "";
+"best_scene_discover_card_body" = "";
+"print_discover_card_title" = "";
+"print_discover_card_body" = "";
