--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2298,3 +2298,4 @@ then {11,99 TRY/Month}*/
 "set_recovery_mail_success" = "";
 "set_recoverymail_securityquestion_success" = "";
 "settings_set_password_apple_warning" = "";
+"lifebox_resignup_warning" = "";
