--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2228,14 +2228,14 @@ then {11,99 TRY/Month}*/
 "scan_qr_code" = "QR-Code Scannen";
 "scan_qr_code_info" = "Scannen Sie den QR-Code auf dem Gerät, das Sie verbinden möchten.";
 "qr_code_try_again" = "QR-Code-Scan fehlgeschlagen. Bitte versuchen Sie es erneut.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"print" = "Drucken";
+"photo_max_selection_title" = "Sie haben das Recht auf %@ Fotos";
+"photo_max_selection_body" = "Sie können maximal %@ Fotos zum Drucken senden.";
 "set_recovery_mail_success" = "Ihre Wiederherstellungs-E-Mail wurde erstellt.";
 "set_recoverymail_securityquestion_success" = "Ihre Wiederherstellungs-E-Mail und die geheime Frage wurden erstellt.";
 "settings_set_password_apple_warning" = "Sie müssen mit einem Apple-Konto bei lifebox angemeldet sein, um ein Kennwort festzulegen.";
-"lifebox_resignup_warning" = "";
-"best_scene_discover_card_title" = "";
-"best_scene_discover_card_body" = "";
-"print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"lifebox_resignup_warning" = "Es existiert bereits ein Konto mit den von Ihnen eingegebenen Informationen. Wenn Sie fortfahren, wird die GSM-Nummer des anderen Kontos gelöscht. Sie können dann nur mit Ihrer E-Mail-Adresse und Ihrem Passwort auf Ihr Konto zugreifen. Sind Sie sicher, dass Sie fortfahren möchten?";
+"best_scene_discover_card_title" = "Fotoserien";
+"best_scene_discover_card_body" = "Wählen Sie das Beste aus einer Fotoserie aus!";
+"print_discover_card_title" = "Druck-Paket";
+"print_discover_card_body" = "Drucken Sie mit dem Druckpaket jeden Monat bis zu %@ Fotos und lassen Sie sie kostenlos an Ihre Adresse liefern.";
