--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2270,14 +2270,14 @@ then {11,99 TRY/Month}*/
 "scan_qr_code" = "Escanear Código QR";
 "scan_qr_code_info" = "Escanee el código QR del dispositivo que desea conectar.";
 "qr_code_try_again" = "Error al escanear el código QR. Por favor, inténtelo de nuevo.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"print" = "Printare";
+"photo_max_selection_title" = "Tienes Derecho a %@ Fotos";
+"photo_max_selection_body" = "Puede enviar un máximo de %@ fotos para imprimir.";
 "set_recovery_mail_success" = "Se ha creado tu correo electrónico de recuperación.";
 "set_recoverymail_securityquestion_success" = "Se han creado tu correo electrónico de recuperación y tu pregunta secreta.";
 "settings_set_password_apple_warning" = "Debes haber iniciado sesión en lifebox con una cuenta de Apple para establecer una contraseña.";
-"lifebox_resignup_warning" = "";
-"best_scene_discover_card_title" = "";
-"best_scene_discover_card_body" = "";
-"print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"lifebox_resignup_warning" = "Ya existe una cuenta para la información que ha introducido. Si continúa, se eliminará el número GSM de la otra cuenta. Sólo podrá acceder a su cuenta con su dirección de correo electrónico y su contraseña. ¿Está seguro de que desea continuar?";
+"best_scene_discover_card_title" = "Series de Fotos";
+"best_scene_discover_card_body" = "Elige lo mejor de una serie de fotos!";
+"print_discover_card_title" = "Paquete de Imprimir";
+"print_discover_card_body" = "Imprime hasta un %@ de tus fotos cada mes con un paquete de impresión y recíbelas gratis directamente en tu domicilio.";
