--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2533,14 +2533,14 @@ then {11,99 TRY/Month}*/
 "scan_qr_code" = "Scanner le Code QR";
 "scan_qr_code_info" = "Scannez le code QR de l'appareil que vous souhaitez connecter.";
 "qr_code_try_again" = "Le scan du code QR a échoué. Veuillez réessayer.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"print" = "Imprimer";
+"photo_max_selection_title" = "Vous Avez Droit à %@ Photos";
+"photo_max_selection_body" = "Vous avez le droit d'envoyer un maximum de %@ photos pour impression.";
 "set_recovery_mail_success" = "Votre e-mail de récupération a été créé.";
 "set_recoverymail_securityquestion_success" = "Votre courriel de récupération et votre question secrète ont été créés.";
 "settings_set_password_apple_warning" = "Vous devez être connecté à lifebox avec un compte Apple pour définir un mot de passe.";
-"lifebox_resignup_warning" = "";
-"best_scene_discover_card_title" = "";
-"best_scene_discover_card_body" = "";
-"print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"lifebox_resignup_warning" = "Il existe déjà un compte pour l'information que vous avez introduite. Si vous continuez, le numéro de GSM de l'autre compte sera supprimé. Vous ne pourrez accéder à votre compte qu'avec votre adresse e-mail et votre mot de passe. Etes-vous sûr de vouloir continuer?";
+"best_scene_discover_card_title" = "Série de Photos";
+"best_scene_discover_card_body" = "Choisissez le meilleur d'une série de photos!";
+"print_discover_card_title" = "Pack d'impression";
+"print_discover_card_body" = "Imprimez jusqu'à %@ photos chaque mois avec le forfait d'impression et faites-les livrer gratuitement à votre adresse.";
