--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2242,14 +2242,14 @@ then {11,99 TRY/Month}*/
 "scan_qr_code" = "Сканирование QR-кода";
 "scan_qr_code_info" = "Отсканируйте QR-код на устройстве, которое вы хотите подключить.";
 "qr_code_try_again" = "Сканирование QR-кода не удалось. Пожалуйста, попробуйте еще раз.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"print" = "Печать";
+"photo_max_selection_title" = "Вы Имеете Право на %@ Фотографий";
+"photo_max_selection_body" = "Вы можете отправить на печать не более %@ фотографий.";
 "set_recovery_mail_success" = "Ваша электронная почта для восстановления была создана.";
 "set_recoverymail_securityquestion_success" = "Ваша электронная почта для восстановления и секретный вопрос были созданы.";
 "settings_set_password_apple_warning" = "Чтобы установить пароль, необходимо войти в lifebox с помощью учетной записи Apple.";
-"lifebox_resignup_warning" = "";
-"best_scene_discover_card_title" = "";
-"best_scene_discover_card_body" = "";
-"print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"lifebox_resignup_warning" = "Аккаунт для введенной вами информации уже существует. Если вы продолжите, номер GSM из другого аккаунта будет удален. Вы сможете получить доступ к своему аккаунту только с помощью адреса электронной почты и пароля. Вы уверены, что хотите продолжить?";
+"best_scene_discover_card_title" = "Серия Фотографий";
+"best_scene_discover_card_body" = "Выберите лучшее из серии фотографий!";
+"print_discover_card_title" = "Пакет Печати";
+"print_discover_card_body" = "Печатайте до %@ фотографий каждый месяц с пакетом печати и получайте их бесплатно прямо на свой адрес.";
