--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -168,7 +168,7 @@
 "New PlayList" = "Listë e re muzikore";
 "New Album" = "Album I Ri";
 "New Folder" = "Dosje e Ri";
-"Print" = "Printoni ";
+"Print" = "Printoni";
 "Make album cover" = "Bejeni kapak të albumit ";
 "Add To Album" = "Shtoni në Album";
 "Remove From Album" = "Hiqni nga Albumi ";
@@ -2271,14 +2271,14 @@ then {11,99 TRY/Month}*/
 "scan_qr_code" = "Skanoni Kodin QR";
 "scan_qr_code_info" = "Skanoni kodin QR në pajisjen që dëshironi të lidhni.";
 "qr_code_try_again" = "Skanimi i kodit QR dështoi. Ju lutem provoni përsëri.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"print" = "Printoni";
+"photo_max_selection_title" = "Ju Keni %@ të Drejtat e Fotografisë";
+"photo_max_selection_body" = "Mund të dërgoni deri në %@ fotografi për printim.";
 "set_recovery_mail_success" = "Email-i juaj i rikuperimit është krijuar.";
 "set_recoverymail_securityquestion_success" = "Email-i juaj i rikuperimit dhe pyetja e sigurisë janë krijuar.";
 "settings_set_password_apple_warning" = "Për të vendosur fjalëkalimin tuaj, duhet të identifikoheni në lifebox me llogarinë tuaj Apple.";
-"lifebox_resignup_warning" = "";
-"best_scene_discover_card_title" = "";
-"best_scene_discover_card_body" = "";
-"print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"lifebox_resignup_warning" = "Ekziston tashmë një llogari për informacionin që keni futur. Nëse vazhdoni, numri GSM nga llogaria tjetër do të fshihet. Do të mund të hyni në llogarinë tuaj vetëm duke përdorur adresën tuaj të emailit dhe fjalëkalimin. Je i sigurt që dëshiron të vazhdosh?";
+"best_scene_discover_card_title" = "Seria e Fotografive";
+"best_scene_discover_card_body" = "Zgjidh më të mirën nga një seri fotografish!";
+"print_discover_card_title" = "Paketën e Printimit";
+"print_discover_card_body" = "Printoni deri në %@ fotografi çdo muaj me paketën tonë të printimit dhe dërgojini ato drejtpërdrejt në derën tuaj falas.";
