--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2230,14 +2230,14 @@ then {11,99 TRY/Month}*/
 "scan_qr_code" = "Відскануйте QR-код";
 "scan_qr_code_info" = "Відскануйте QR-код на пристрої, який ви хочете підключити.";
 "qr_code_try_again" = "Не вдалося відсканувати QR-код. Будь ласка, спробуйте ще раз.";
-"print" = "";
-"photo_max_selection_title" = "";
-"photo_max_selection_body" = "";
+"print" = "Друкувати";
+"photo_max_selection_title" = "Ви Маєте Право на %@ Фотографій";
+"photo_max_selection_body" = "Ви можете відправити на друк не більше %@ фотографій.";
 "set_recovery_mail_success" = "Вашу електронну пошту для відновлення було створено.";
 "set_recoverymail_securityquestion_success" = "Вашу електронну пошту для відновлення та секретне запитання було створено.";
 "settings_set_password_apple_warning" = "Щоб встановити пароль, необхідно увійти в lifebox за допомогою облікового запису Apple.";
-"lifebox_resignup_warning" = "";
-"best_scene_discover_card_title" = "";
-"best_scene_discover_card_body" = "";
-"print_discover_card_title" = "";
-"print_discover_card_body" = "";
+"lifebox_resignup_warning" = "Акаунт для введеної вами інформації вже існує. Якщо ви продовжите, номер GSM з іншого акаунта буде видалено. Ви зможете отримати доступ до свого облікового запису тільки за допомогою адреси електронної пошти та пароля. Ви впевнені, що хочете продовжити?";
+"best_scene_discover_card_title" = "Серія Фотографій";
+"best_scene_discover_card_body" = "Виберіть найкраще із серії фотографій!";
+"print_discover_card_title" = "Пакет Друку";
+"print_discover_card_body" = "Друкуйте до %@ фотографій щомісяця з пакетом друку та отримуйте їх безкоштовно прямо на свою адресу.";
